[gd_scene load_steps=27 format=3 uid="uid://dksa68cph6y4b"]

[ext_resource type="Script" uid="uid://crthia45btsg0" path="res://camera_controller.gd" id="2"]
[ext_resource type="Shader" uid="uid://d0lvsuslyb3of" path="res://split_screen.gdshader" id="3"]
[ext_resource type="Texture2D" uid="uid://brwp8bimc75uu" path="res://icon.webp" id="4"]
[ext_resource type="Script" uid="uid://b3w42xxb434i3" path="res://player.gd" id="5"]
[ext_resource type="Script" uid="uid://dyevnyllyk6lr" path="res://GameManager.gd" id="5_6cpg0"]
[ext_resource type="Script" uid="uid://b03wlsd42nbhw" path="res://StormZone.gd" id="6_a6vh8"]
[ext_resource type="Script" uid="uid://keqnesh70e07" path="res://Crate.gd" id="7_c7r5a"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_16la2"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_i64ko"]
sky_material = SubResource("ProceduralSkyMaterial_16la2")

[sub_resource type="Environment" id="Environment_vdrvu"]
background_mode = 2
sky = SubResource("Sky_i64ko")
ambient_light_source = 2
ambient_light_color = Color(0.79, 0.8775, 1, 1)
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.33
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("3")
shader_parameter/viewport_size = Vector2(0, 0)
shader_parameter/split_active = false
shader_parameter/player1_position = Vector2(0, 0)
shader_parameter/player2_position = Vector2(0, 0)
shader_parameter/split_line_thickness = 10.0
shader_parameter/split_line_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="2"]
radius = 0.375
height = 1.75
rings = 4

[sub_resource type="StandardMaterial3D" id="3"]
albedo_color = Color(0.933333, 0.0784314, 0.0784314, 1)

[sub_resource type="CapsuleShape3D" id="4"]
radius = 0.375
height = 1.75

[sub_resource type="TorusMesh" id="TorusMesh_abtrc"]
inner_radius = 0.4
outer_radius = 0.6
ring_segments = 6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_63nwq"]
albedo_color = Color(0.5, 0.5, 0.5, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="5"]
albedo_color = Color(0.0784314, 0.411765, 0.933333, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wi7e2"]
albedo_color = Color(0.5, 0.5, 0.5, 1)
emission_enabled = true
emission = Color(0.12549, 0.501961, 1, 1)

[sub_resource type="StandardMaterial3D" id="6"]

[sub_resource type="PlaneMesh" id="7"]
material = SubResource("6")
size = Vector2(200, 200)

[sub_resource type="BoxShape3D" id="8"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8y8ki"]

[sub_resource type="CylinderMesh" id="CylinderMesh_vavsa"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mkrvw"]
transparency = 1
albedo_color = Color(0.3086788, 0.46178758, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_6cpg0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a6vh8"]

[node name="World3D" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_energy = 0.05
shadow_enabled = true
shadow_bias = 0.03
shadow_blur = 2.0
directional_shadow_mode = 0
directional_shadow_split_3 = 0.25
directional_shadow_blend_splits = true
directional_shadow_fade_start = 1.0
directional_shadow_max_distance = 12.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vdrvu")

[node name="Cameras" type="Node3D" parent="."]
script = ExtResource("2")
max_separation = 10.0

[node name="View" type="TextureRect" parent="Cameras"]
material = SubResource("1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4")

[node name="MiniMap" type="Control" parent="Cameras/View"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MapTexture" type="TextureRect" parent="Cameras/View/MiniMap"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Player1Icon" type="TextureRect" parent="Cameras/View/MiniMap"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Player2Icon" type="TextureRect" parent="Cameras/View/MiniMap"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SwapIcon" type="TextureRect" parent="Cameras/View/MiniMap"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Viewport1" type="SubViewport" parent="Cameras"]
msaa_3d = 2
size = Vector2i(100, 100)
render_target_update_mode = 3

[node name="Camera1" type="Camera3D" parent="Cameras/Viewport1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0)
current = true

[node name="Viewport2" type="SubViewport" parent="Cameras"]
msaa_3d = 2
size = Vector2i(100, 100)
render_target_update_mode = 3

[node name="Camera2" type="Camera3D" parent="Cameras/Viewport2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0)
current = true

[node name="Player1" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
script = ExtResource("5")

[node name="Mesh" type="MeshInstance3D" parent="Player1"]
mesh = SubResource("2")
surface_material_override/0 = SubResource("3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player1"]
shape = SubResource("4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)
mesh = SubResource("TorusMesh_abtrc")
surface_material_override/0 = SubResource("StandardMaterial3D_63nwq")

[node name="OmniLight3D" type="OmniLight3D" parent="Player1"]
light_color = Color(1, 0, 0, 1)

[node name="Player2" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.184, 0.875, 3.019)
script = ExtResource("5")
is_computer = true

[node name="Mesh" type="MeshInstance3D" parent="Player2"]
mesh = SubResource("2")
surface_material_override/0 = SubResource("5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player2"]
shape = SubResource("4")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Player2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0)
mesh = SubResource("TorusMesh_abtrc")
skeleton = NodePath("../../Player1")
surface_material_override/0 = SubResource("StandardMaterial3D_wi7e2")

[node name="OmniLight3D" type="OmniLight3D" parent="Player2"]
light_color = Color(0.12549, 0.501961, 1, 1)

[node name="Ground" type="StaticBody3D" parent="."]

[node name="Mesh" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(20, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0)
mesh = SubResource("7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(200, 0, 0, 0, 1, 0, 0, 0, 200, 0, -1, 0)
shape = SubResource("8")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("5_6cpg0")

[node name="StormZone" type="Area3D" parent="GameManager"]
visible = false
script = ExtResource("6_a6vh8")
initial_radius = 50.0
damage_increase_rate = 5.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameManager/StormZone"]
transform = Transform3D(1.0089036, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_8y8ki")

[node name="MeshInstance3D" type="MeshInstance3D" parent="GameManager/StormZone"]
mesh = SubResource("CylinderMesh_vavsa")
surface_material_override/0 = SubResource("StandardMaterial3D_mkrvw")

[node name="Crates" type="Node3D" parent="."]

[node name="crate" type="Area3D" parent="Crates"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)
script = ExtResource("7_c7r5a")
crate_type = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Crates/crate"]
transform = Transform3D(1, 0, 0, 0, 1.43, 0, 0, 0, 1, 0, 0.69805014, 0)
mesh = SubResource("BoxMesh_6cpg0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Crates/crate"]
transform = Transform3D(1, 0, 0, 0, 1.6069242, 0, 0, 0, 1, 0, 0.6440408, 0)
shape = SubResource("BoxShape3D_a6vh8")

[node name="crate2" type="Area3D" parent="Crates"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)
script = ExtResource("7_c7r5a")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Crates/crate2"]
transform = Transform3D(1, 0, 0, 0, 1.43, 0, 0, 0, 1, 0, 0.69805014, 0)
mesh = SubResource("BoxMesh_6cpg0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Crates/crate2"]
transform = Transform3D(1, 0, 0, 0, 1.6069242, 0, 0, 0, 1, 0, 0.6440408, 0)
shape = SubResource("BoxShape3D_a6vh8")

[node name="crate3" type="Area3D" parent="Crates"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
script = ExtResource("7_c7r5a")
crate_type = 2
respawn_time = 15.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Crates/crate3"]
transform = Transform3D(1, 0, 0, 0, 1.43, 0, 0, 0, 1, 0, 0.69805014, 0)
mesh = SubResource("BoxMesh_6cpg0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Crates/crate3"]
transform = Transform3D(1, 0, 0, 0, 1.6069242, 0, 0, 0, 1, 0, 0.6440408, 0)
shape = SubResource("BoxShape3D_a6vh8")

[connection signal="area_entered" from="GameManager/StormZone" to="Cameras" method="_on_storm_zone_area_entered"]
[connection signal="area_entered" from="Crates/crate" to="Cameras" method="_on_crate_area_entered"]
